Update for upgrades to 20.10.

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -106,8 +106,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=eoan
-To=focal
+From=focal
+To=groovy
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
