--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,146 +1,2 @@
-# demoted packages from focal to groovy
-apparmor-notify
-appstream-doc
-appstream-glib-doc
-apt-clone
-cpp-9
-cpp-9-aarch64-linux-gnu
-cpp-9-arm-linux-gnueabihf
-cpp-9-doc
-cpp-9-powerpc64le-linux-gnu
-cpp-9-s390x-linux-gnu
-drac-dev
-fonts-arabeyes
-g++-9
-g++-9-aarch64-linux-gnu
-g++-9-arm-linux-gnueabihf
-g++-9-multilib
-g++-9-powerpc64le-linux-gnu
-g++-9-s390x-linux-gnu
-gcc-9
-gcc-9-aarch64-linux-gnu
-gcc-9-aarch64-linux-gnu-base
-gcc-9-arm-linux-gnueabihf
-gcc-9-arm-linux-gnueabihf-base
-gcc-9-base
-gcc-9-cross-base
-gcc-9-doc
-gcc-9-multilib
-gcc-9-powerpc64le-linux-gnu
-gcc-9-powerpc64le-linux-gnu-base
-gcc-9-s390x-linux-gnu
-gcc-9-s390x-linux-gnu-base
-gfortran-9
-gfortran-9-doc
-gfortran-9-multilib
-gfxboot
-gfxboot-dev
-gir1.2-appstreamglib-1.0
-gnome-software
-gnome-software-common
-gnome-software-dev
-gnome-software-doc
-gnome-software-plugin-snap
-golang-1.13
-golang-1.13-doc
-golang-1.13-go
-golang-1.13-race-detector-runtime
-golang-1.13-src
-golang-github-opencontainers-runc-dev
-golang-github-snapcore-snapd-dev
-golang-github-ubuntu-core-snappy-dev
-golang-redhat-audit-dev
-gutenprint-doc
-installation-report
-isolinux
-lib32asan5
-lib32gcc-9-dev
-lib32gfortran-9-dev
-lib32go-9-dev
-lib32go14
-lib32stdc++-9-dev
-lib64asan5
-lib64gcc-9-dev
-lib64gfortran-9-dev
-lib64go-9-dev
-lib64go14
-lib64stdc++-9-dev
-libapparmor-perl
-libappstream-glib-dev
-libappstream-glib8
-libasan5
-libasan5-arm64-cross
-libasan5-armhf-cross
-libasan5-ppc64el-cross
-libasan5-s390x-cross
-libcppunit-subunit-dev
-libcppunit-subunit0
-libemail-valid-perl
-libgcc-9-dev
-libgcc-9-dev-arm64-cross
-libgcc-9-dev-armhf-cross
-libgcc-9-dev-ppc64el-cross
-libgcc-9-dev-s390x-cross
-libgfortran-9-dev
-libgo-9-dev
-libgo14
-libgutenprint-dev
-libgutenprint-doc
-libjs-modernizr
-libllvm9
-libmozjs-68-0
-libmozjs-68-dev
-libmpdec-dev
-libmpdec-doc
-libmpdec2
-libnss-myhostname
-libnvidia-extra-440
-libopenobex2
-libopenobex2-dev
-libpfm4
-libpfm4-dev
-libstdc++-9-dev
-libstdc++-9-dev-arm64-cross
-libstdc++-9-dev-armhf-cross
-libstdc++-9-dev-ppc64el-cross
-libstdc++-9-dev-s390x-cross
-libstdc++-9-doc
-libstdc++-9-pic
-libsubunit-dev
-libsubunit0
-libtext-levenshtein-perl
-libvirt-daemon-driver-storage-rbd
-libx32asan5
-libx32gcc-9-dev
-libx32gfortran-9-dev
-libx32go-9-dev
-libx32go14
-libx32stdc++-9-dev
-lilo
-lilo-doc
-mutter
-openobex-apps
-psf-unifont
-python-genshi-doc
-python-polib-doc
-python3-astroid
-python3-entrypoints
-python3-feedparser
-python3-genshi
-python3-kazoo
-python3-lazy-object-proxy
-python3-logilab-common
-python3-nine
-python3-pep8
-python3-polib
-python3-scripttest
-python3-subunit
-python3-testrepository
-python3-zake
-seccomp
-syslinux
-syslinux-common
-ttf-unifont
-ubuntu-core-snapd-units
-unifont
-xfonts-unifont
+# demoted packages from groovy to hirsute
+
