--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9),
                python3-all,
                dh-python,
                python3-distutils-extra, 
-               python3-apt (>= 0.8.5~),
+               python3-apt (>= 2.1.5),
                lsb-release,
                ubuntu-drivers-common (>= 1:0.2.55) [i386 amd64], 
                python3-update-manager (>= 1:19.04.5),
