--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -106,8 +106,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=groovy
-To=hirsute
+From=hirsute
+To=impish
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
